--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,13 +35,16 @@
             "prefix": "app",
             "style": "camelCase"
           }
-        ]
+        ],
+        "curly":"off",
+        "no-underscore-dangle":"off"
       }
     },
     {
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {}
+      "rules": {
+      }
     }
   ]
 }
