feat(home): add basic layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
           }
         ],
         "curly":"off",
-        "no-underscore-dangle":"off"
+        "no-underscore-dangle":"off",
+        "arrow-body-style": "off"
       }
     },
     {
